@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,11 +20,11 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-  
+
 package org.openjdk.bench.jdk.incubator.vector.crypto;
 
 import org.openjdk.jmh.annotations.*;
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 import jdk.incubator.vector.*;
 
 import java.nio.ByteOrder;
@@ -39,11 +39,11 @@ public class ChaChaBench {
 
     @Param({"16384", "65536"})
     private int dataSize;
-    
+
     private ChaChaVector cc20_S128 = makeCC20(VectorShape.S_128_BIT);
     private ChaChaVector cc20_S256 = makeCC20(VectorShape.S_256_BIT);
     private ChaChaVector cc20_S512 = makeCC20(VectorShape.S_512_BIT);
- 
+
     private MemorySegment in;
     private MemorySegment out;
 
@@ -365,7 +365,7 @@ public class ChaChaBench {
         for (int i = 0; i < result.length; i++) {
             result[i] = (byte) Character.digit(str.charAt(2 * i), 16);
             result[i] <<= 4;
-            result[i] += Character.digit(str.charAt(2 * i + 1), 16);
+            result[i] += (byte) Character.digit(str.charAt(2 * i + 1), 16);
         }
         return result;
     }
